# sports_mental_health_model

./: .gitignore  ISAAC_intro_working_notes.md  PLAN.md  README.md  demo_gate.bat  label_location_internals.md  metrics_interrater.py  requirements.txt  variable_list.md  watch_monitor.bat
code/: audit_score.py  classify_corpus.py  cli.py  demo_gate.py  driver_classify.py  eval_and_gate.py  eval_and_gate_grid.py  eval_holdout_errors.py  eval_holdout_gate.py  eval_holdout_grid.py  eval_holdout_stack.py  eval_thresholds.py  filter_keywords.py  filter_keywords_adv.py  filter_language.py  filter_relevance.py  filter_sample.py  label_emotion.py  label_generalization.py  label_location.py  label_moralization.py  label_sentiment.py  make_aug.py  make_aug_mh_sportonly.py  make_aug_negation.py  make_aug_sport.py  metrics_interrater.py  organize_anonymize.py  organize_types.py  slurm.sh  train_location_preprocess.py  train_location_training.py  train_location_weighting.py  train_relevance.py  utils.py  watch_training.py
docs/: OVERNIGHT_REPORT.md  mh_rubric_broad.md  relevance_layer1_methods.md  relevance_layer1_process.md
experiments/: trials_log.md
isaac-data-loader/: .gitignore  README.md  pyproject.toml
isaac-data-loader/isaac_data/: __init__.py  cli.py  core.py  sampling.py  terms.py
isaac-data-loader/tests/: test_smoke.py
keywords/: ability_abled.txt  ability_abled_adv.txt  ability_disabled.txt  ability_disabled_adv.txt  age_old.txt  age_old_adv.txt  age_young.txt  age_young_adv.txt  race_black.txt  race_black_adv.txt  race_white.txt  race_white_adv.txt  (+12 more)
(+37 files in other folders)
